mysql-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-keycloak
  template:
    metadata:
      labels:
        app: mysql-keycloak
    spec:
      containers:
        - name: mysql-keycloak
          image: mysql:8.0
          ports:
            - containerPort: 3306
          args:
            - "--default-authentication-plugin=mysql_native_password"

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-keycloak
spec:
  selector:
    app: mysql-keycloak
  ports:
    - protocol: TCP
      port: 3307
      targetPort: 3306
